Fix minor misalignment of plaintext editor

--- a/web/styles/editor.css
+++ b/web/styles/editor.css
@@ -125,6 +125,7 @@ html, body {
 	padding: 4px 8px 16px 8px;
 	resize: none;
 	white-space: pre;
+	box-sizing: border-box;
 }
 
 .param {
